# InsightXpert_in

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260428_0002_sample_questions_column.py  20260519_0001_profile_overrides_and_hints.py  20260521_0001_messages_generation_time_ms.py  20260521_0002_perf_indexes.py  20260522_0001_backfill_timestamps.py  20260522_0002_insights_columns.py  20260527_0001_onboarding_completed.py  2026_04_21_0001_users_table.py  2026_04_21_0002_orchestration_tables.py  2026_04_21_0003_audit_metrics_db_visibility.py  2026_04_22_0001_seed_transactions_db.py  2026_04_22_0002_automations_tables.py  2026_04_24_0001_databases_pipeline_mode_default.py  2026_04_25_0001_query_metrics_cost_columns.py  2026_04_25_0002_databases_dialect.py  2026_04_27_0001_databases_connection_kind.py  2026_04_27_0003_pgvector_vectors_table.py  2026_04_27_0004_database_profiles_table.py  2026_04_28_0001_shared_snapshots_table.py
apps/api/few_shot/: README.md  few_shot_mini_dev.json  few_shot_mini_dev.npz
apps/api/scripts/: apply-vendored-patches.sh  benchmark.py  build-bird-fewshot-bank.py  fetch-bundled-dbs.sh  import-fork-chats.py  seed-bundled-profiles.py  seed-toxicology-postgres.sh  sync-turso-transactions.sh
apps/api/scripts/vendored_patches/: 0001-strip-org-id-from-toolcontext.patch  0002-drop-run-python-tool.patch  0003-inject-analyst-impl.patch  README.md
apps/api/src/insightxpert_api/: config.py  logging.py  main.py  observability.py  sentry.py  sla.py
apps/api/src/insightxpert_api/admin/: __init__.py  overview_cache.py
apps/api/src/insightxpert_api/agents/: __init__.py  analyst.py  protocol.py
apps/api/src/insightxpert_api/audit/: __init__.py  middleware.py  queue.py  table.py
apps/api/src/insightxpert_api/auth/: __init__.py  current_user.py  dependencies.py  rate_limit.py  session.py
apps/api/src/insightxpert_api/automations/: __init__.py  ai_sql.py  evaluator.py  models.py  nl_trigger.py  notifications.py  repository.py  runner.py  scheduler.py  service.py  table.py
apps/api/src/insightxpert_api/connections/: __init__.py  encryption.py  mysql_connector.py  postgres_connector.py  types.py
apps/api/src/insightxpert_api/databases/: __init__.py  repository.py  service.py  table.py
apps/api/src/insightxpert_api/db/: __init__.py  async_utils.py  base.py  connector.py  engine.py  schema.py
apps/api/src/insightxpert_api/insights/: repository.py  service.py
apps/api/src/insightxpert_api/jobs/: sample_questions_job.py
apps/api/src/insightxpert_api/llm/: __init__.py  base.py  deepseek.py  (+1 more)
apps/api/tests/: conftest.py  test_analyst_prompt_domain_agnostic.py  test_connections_encryption.py  test_connections_validation.py  test_connector_dispatch.py  test_documentation_from_profile.py  test_migrations_connections.py  test_mode_router.py  test_upload.py
apps/api/tests/integration/: test_admin_api_smoke.py  test_admin_conversations_api.py  test_admin_databases_api.py  test_admin_observability.py  test_admin_prompts_api.py  test_admin_rag_api.py  test_admin_users_api.py  test_audit_middleware.py  test_auth.py  test_auth_flow.py  test_auth_login.py  test_auth_register.py  test_automations_claim.py  test_automations_crud.py  test_automations_feature_flag.py  test_automations_internal_endpoint.py  test_automations_nl_trigger.py  test_automations_runner.py  test_automations_templates_path.py  test_bundled_db_path.py  test_chat_documentation_injection.py  test_chat_sse.py  test_chat_variants.py  test_client_config.py  test_config_threshold.py  test_connections_routes.py  test_conversations.py  test_csv_upload.py  test_databases.py  test_databases_visibility.py  test_end_to_end.py  test_end_to_end_b2.py  test_feedback.py  test_health.py  test_metrics_tokens.py  test_notifications_admin_all.py  test_notifications_sse.py  test_orchestrator_modes.py  test_pipeline_mode_full_schema.py  test_postgres_connector.py  (+8 more)
apps/api/tests/sample_questions/: test_category_selector.py  test_fallback_generator.py  test_few_shot_retriever.py  test_generator.py  test_job.py  test_profile_hook.py  test_prompt_builder.py  test_regenerate_endpoint.py  test_repository.py  test_schema_features.py  test_seed_extension.py  test_sse_payload.py  test_stage.py  test_types.py  test_validator.py
apps/api/tests/unit/: test_agent_protocol.py  test_analyst_adapter.py  test_audit_queue.py  test_audit_queue_overflow.py  test_auth_session.py  test_automations_evaluator.py  test_automations_models.py  test_automations_scheduler.py  test_batched_quirks.py  test_batched_summary.py  test_chunk_envelope.py  test_chunks.py  test_config.py  test_connector.py  test_conversation_store.py  test_current_user.py  test_database_service.py  test_databases_service.py  test_db_engine.py  test_db_engine_isolation.py  test_db_url_config.py  test_default_pipeline.py  test_executor_stage.py  test_few_shot_service.py  test_gemini_client.py  test_generator_stage.py  test_linker_stage.py  test_llm_usage.py  test_local_storage.py  test_metrics_endpoint.py  test_migration_query_metrics_extension.py  test_migrations.py  test_migrations_b2.py  test_migrations_b3.py  test_migrations_c1.py  test_mysql_connection_validation.py  test_mysql_dialect_adapter.py  test_pgvector_store.py  test_pipeline_orchestrator.py  test_pipeline_preflight.py  (+17 more)
(+381 files in other folders)
