[project]
name = "insightxpert-api"
version = "0.1.0"  # DECISION(D-081): Version 0.1.0 is SemVer placeholder — no formal bump criteria yet
description = "insightxpert.ai — FastAPI backend orchestrating the text-to-SQL pipeline"
requires-python = ">=3.12,<3.13"  # DECISION(D-082): Python >=3.12,<3.13 — PEP 695 type params, TaskGroup; 3.13 excluded due to library-compat risk
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "pydantic[email]>=2.8",
  "pydantic-settings>=2.4",
  "google-genai>=0.2",
  "openai>=1.0",
  "google-cloud-storage>=2.18",
  "itsdangerous>=2.2",
  "sqlglot>=25.0",
  "datasketch>=1.6",
  "numpy>=1.26",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "structlog>=24.4",
  "argon2-cffi>=25.1.0",
  "alembic>=1.18.4",
  "sqlalchemy>=2.0.49",
  "pandas>=3.0.2",
  "openpyxl>=3.1",
  "scipy>=1.17.1",
  "apscheduler>=3.10,<4.0",
  "croniter>=2.0",
  "psycopg[binary]>=3.1",
  "pymysql>=1.1",
  "sentry-sdk[fastapi]>=2.18",
  "cryptography>=42.0",
  "pgvector>=0.3.0",
  "websockets>=13.0",
	"prometheus-client>=0.21",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]

# DECISION(D-087): uv package manager (fast Rust resolver, lockfile); hatchling build backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insightxpert_api"]

# DECISION(D-086): ruff for lint+format (not flake8+black), mypy strict mode, pytest-asyncio auto mode
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["src/insightxpert_api/vendored/"]

# DECISION(D-085): @pytest.mark.gemini for live API tests — gated behind GEMINI_API_KEY_REAL; skipped in CI
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "slow: requires a real Gemini API key; opt in via GEMINI_API_KEY_REAL",
  "gemini: requires a live Gemini API key; skipped in CI without GEMINI_API_KEY",
]
